mobot/v0.5/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: chatbot
  name: chatbot
spec:
  finalizers:
    - kubernetes
