mobot/v0.5/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobot-v5
  namespace: chatbot
spec:
  ingressClassName: nginx
  rules:
    - host: v5.mobot.local
      http:
        paths:
          - backend:
              service:
                name: mobot-v5
                port:
                  number: 7860
            path: /
            pathType: ImplementationSpecific
